--- a/BSVBattleRoyale/SignIn With Apple Scene/Login.storyboard
+++ b/BSVBattleRoyale/SignIn With Apple Scene/Login.storyboard
@@ -17,10 +17,23 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="Ctw-tJ-or5"/>
                     </view>
+                    <connections>
+                        <segue destination="UAG-Dv-zfT" kind="show" identifier="ShowSegueToMainStoryboard" id="Mu2-OM-B9M"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bg9-kl-jiR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="17" y="114"/>
+        </scene>
+        <!--Main-->
+        <scene sceneID="RXs-mN-ZCj">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="MainStoryboard" storyboardName="Main" id="UAG-Dv-zfT" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="LRC-bv-DgJ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ws4-BF-fH5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="793" y="33"/>
         </scene>
     </scenes>
 </document>
