--- a/BSVBattleRoyale/SignIn With Apple Scene/Login.storyboard
+++ b/BSVBattleRoyale/SignIn With Apple Scene/Login.storyboard
@@ -19,7 +19,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="QUs-Ok-5Ck">
-                                <rect key="frame" x="40" y="64" width="334" height="419"/>
+                                <rect key="frame" x="40" y="64" width="334" height="325"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" translatesAutoresizingMaskIntoConstraints="NO" id="Slh-FZ-pLv">
                                         <rect key="frame" x="0.0" y="0.0" width="334" height="32"/>
@@ -34,7 +34,7 @@
                                             <action selector="segmentedControlChanged:" destination="HqL-B6-ywn" eventType="valueChanged" id="SAA-Ds-qyx"/>
                                         </connections>
                                     </segmentedControl>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wqU-UR-9kG">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wqU-UR-9kG">
                                         <rect key="frame" x="0.0" y="67" width="334" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -44,15 +44,15 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xeC-ST-0bZ">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password Again" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xeC-ST-0bZ">
                                         <rect key="frame" x="0.0" y="207" width="334" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oki-1m-zrP">
-                                        <rect key="frame" x="0.0" y="277" width="334" height="142"/>
+                                        <rect key="frame" x="0.0" y="277" width="334" height="48"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="142" id="yki-AR-2wD"/>
+                                            <constraint firstAttribute="height" constant="48" id="yki-AR-2wD"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                         <state key="normal" title="Register">
