--- a/BSVBattleRoyale/Base.lproj/Main.storyboard
+++ b/BSVBattleRoyale/Base.lproj/Main.storyboard
@@ -21,6 +21,14 @@
                             <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E8G-Au-edL">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
                                 <subviews>
+                                    <visualEffectView opaque="NO" alpha="0.94999999999999996" tag="1234" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jlI-Ka-061">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="3WS-Bp-FPV">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        </view>
+                                        <blurEffect style="systemUltraThinMaterialDark"/>
+                                    </visualEffectView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="r9A-6E-UFe">
                                         <rect key="frame" x="20" y="20" width="374" height="374"/>
                                     </imageView>
@@ -28,14 +36,18 @@
                                         <rect key="frame" x="20" y="20" width="374" height="374"/>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.37180897887323944" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="jlI-Ka-061" firstAttribute="top" secondItem="E8G-Au-edL" secondAttribute="top" id="3Qa-tG-dum"/>
                                     <constraint firstItem="r9A-6E-UFe" firstAttribute="leading" secondItem="E8G-Au-edL" secondAttribute="leading" constant="20" id="D8a-Dt-ZlT"/>
                                     <constraint firstAttribute="trailing" secondItem="r9A-6E-UFe" secondAttribute="trailing" constant="20" id="JkN-XK-zc7"/>
+                                    <constraint firstAttribute="trailing" secondItem="jlI-Ka-061" secondAttribute="trailing" id="Pkd-zU-Blk"/>
                                     <constraint firstItem="3pp-q0-uRX" firstAttribute="leading" secondItem="E8G-Au-edL" secondAttribute="leading" constant="20" id="Sdf-RC-bcL"/>
                                     <constraint firstAttribute="bottom" secondItem="3pp-q0-uRX" secondAttribute="bottom" constant="20" id="Wjq-fj-FqW"/>
+                                    <constraint firstAttribute="bottom" secondItem="jlI-Ka-061" secondAttribute="bottom" id="bh6-3w-cuq"/>
                                     <constraint firstItem="r9A-6E-UFe" firstAttribute="top" secondItem="E8G-Au-edL" secondAttribute="top" constant="20" id="cgz-fg-YLK"/>
                                     <constraint firstItem="3pp-q0-uRX" firstAttribute="top" secondItem="E8G-Au-edL" secondAttribute="top" constant="20" id="kTL-i5-8wo"/>
+                                    <constraint firstItem="jlI-Ka-061" firstAttribute="leading" secondItem="E8G-Au-edL" secondAttribute="leading" id="lQ0-Fv-iKj"/>
                                     <constraint firstAttribute="trailing" secondItem="3pp-q0-uRX" secondAttribute="trailing" constant="20" id="lsD-NE-XM0"/>
                                     <constraint firstAttribute="bottom" secondItem="r9A-6E-UFe" secondAttribute="bottom" constant="20" id="uYT-Yv-Qaj"/>
                                 </constraints>
