--- a/BSVBattleRoyale/Base.lproj/Main.storyboard
+++ b/BSVBattleRoyale/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Plg-SQ-GXv">
-                                <rect key="frame" x="20" y="808" width="374" height="34"/>
+                                <rect key="frame" x="20" y="828" width="374" height="34"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JNo-3n-WW4">
                                         <rect key="frame" x="0.0" y="0.0" width="330" height="34"/>
@@ -84,7 +84,7 @@
                             <constraint firstItem="E8G-Au-edL" firstAttribute="bottom" secondItem="hdR-J4-3VW" secondAttribute="bottom" id="8Rj-tA-lSd"/>
                             <constraint firstItem="hdR-J4-3VW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="A0r-1F-rEZ"/>
                             <constraint firstItem="Plg-SQ-GXv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ckc-s1-Yjf"/>
-                            <constraint firstItem="Plg-SQ-GXv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-20" id="Kgd-0C-I1X"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Plg-SQ-GXv" secondAttribute="bottom" id="Kgd-0C-I1X"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bB5-Jp-Yw5" secondAttribute="trailing" constant="30" id="Qjq-mg-GYA"/>
                             <constraint firstItem="E8G-Au-edL" firstAttribute="top" secondItem="hdR-J4-3VW" secondAttribute="top" id="S8y-7E-bPz"/>
                             <constraint firstAttribute="trailing" secondItem="hdR-J4-3VW" secondAttribute="trailing" id="ZJr-pE-p97"/>
@@ -103,6 +103,7 @@
                         <outlet property="gameView" destination="hdR-J4-3VW" id="aLG-Ix-uQp"/>
                         <outlet property="mapGroup" destination="E8G-Au-edL" id="nKX-6N-iOq"/>
                         <outlet property="mapImage" destination="r9A-6E-UFe" id="qbZ-GB-I6w"/>
+                        <outlet property="textFieldInputConstraint" destination="Kgd-0C-I1X" id="byt-ZI-aZw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
